@@ -6,6 +6,7 @@ How should addServiceListener be expected to work? - ID: 3186552
 ConcurrentModificationException is possible - ID: 3195594
 Registering twice same ServiceInfo blocks - ID: 3195632
 Error message on second register - ID: 3195656
+ServiceInfoImpl returns invalid IPV6 addresses - ID: 3290692
 
 CHANGELOG 20 January 2011 Pierre Frisch
 Rev the source code to 3.4.0
